--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,13 @@ edition = "2021"
 
 [dependencies]
 serde = "1.0"              # Uses the latest compatible 1.x.x version
+serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }  # With specific features
+
+[[bin]]
+name = "server"
+path = "src/main.rs"
+
+[[bin]]
+name = "client"
+path = "src/client.rs"
