--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.134"
 utils = { path = "../utils" }
