--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.216", features = ["derive"] }
 tokio = "1.42.0"
+serde_json = "1.0.134"
+log = "0.4.22"
