--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -8,3 +8,4 @@ serde = { version = "1.0.216", features = ["derive"] }
 tokio = "1.42.0"
 serde_json = "1.0.134"
 log = "0.4.22"
+serde_yaml = "0.9.34+deprecated"
